<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/flapdog_bg">

    <example.com.virtualpet.flapdog.FlapDogView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/flapdogView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/flapdog_gameover_bg"
        android:id="@+id/flapdogGameoverScreen"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="325dp"
        android:padding="25dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="score:"
                style="@style/flapdogGameoverText"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="best"
                style="@style/flapdogGameoverText"
                android:id="@+id/flapdogScoreField" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="beste:"
                style="@style/flapdogGameoverText"
                android:id="@+id/textView2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="beste"
                style="@style/flapdogGameoverText"
                android:id="@+id/flapdogbestscoreField" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/opnieuw"
                        android:onClick="replayButtonClicked"
                        android:id="@+id/button7"
                        android:layout_gravity="left"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terug"
                        android:id="@+id/button8"
                        android:onClick="exitButtonClicked"
                        android:layout_gravity="right"/>
                </TableRow>
            </TableLayout>


        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:id="@+id/flapdogMenuScreen">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spelen"
            android:onClick="flapdogStart"
            android:layout_margin="10dp"
            android:id="@+id/button9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uitleg"
            android:onClick="flapdogUitleg"
            android:layout_margin="10dp"
            android:id="@+id/button6" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/flapdogExplainScreen"
        android:visibility="invisible"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/flapdog_explained"
            android:id="@+id/flapdog_uitleg"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Spelen"
            android:onClick="flapdogStart"
            android:id="@+id/button10"
            android:layout_marginTop="50dp" />
    </LinearLayout>

</RelativeLayout>